--- a/back/rest-api/pom.xml
+++ b/back/rest-api/pom.xml
@@ -63,6 +63,11 @@
             <version>2.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
